# MembraneAnalysisToolbox

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: python-package.yml
MembraneAnalysisToolbox/: EffectivePoreSizeAnalysis.py  Membrane.py  TransitionPathAnalysis.py  effectiveporesizeanalysis.py
examples/: README.md  example_DiffusionAnalysis.ipynb  example_PoreAnalysis.ipynb  example_TPA.py  manual.ipynb
src/MembraneAnalysisToolbox/: DiffusionAnalysis.py  EffectivePoreSizeAnalysis.py  MembraneAnalysis.py  MembraneStructures.py  PoreAnalysis.py  TransitionPathAnalysis.py  __init__.py  core_functions.py  funcs.py
tests/: test_DiffusionAnalysis.py  test_TPA.py
usage/: README.md  dev_PA.ipynb  interactive_DiffusionAnalysis.py  interactive_PoreAnalysis.py
